--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
     "author": "rigidity",
     "version": "1.0.0",
     "repository": "https://github.com/Rigidity/chia.git",
-    "main": "dist/src/index.js",
-    "types": "dist/src/index.d.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "license": "MIT",
     "type": "module",
     "files": [
         "dist"
     ],
-    "scripts": {
-        "test": "mocha './dist/test/**/*.js' --require source-map-support/register --recursive --timeout 0"
-    },
     "devDependencies": {
-        "@types/node": "^16.11.9",
+        "@types/node": "^16.11.12",
         "source-map-support": "^0.5.21"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@types/js-yaml": "^4.0.5",
+        "axios": "^0.24.0",
+        "js-yaml": "^4.1.0"
+    }
 }
