--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@rigidity/chia",
     "author": "rigidity",
-    "version": "1.0.0",
+    "version": "1.0.1",
+    "description": "An implementation of Chia RPC calls in TypeScript.",
     "repository": "https://github.com/Rigidity/chia.git",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
