--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@rigidity/chia",
     "author": "rigidity",
-    "version": "1.1.1",
-    "description": "An implementation of Chia RPC calls in TypeScript.",
+    "version": "1.2.0",
+    "description": "Chia RPC client and various helper utilities.",
     "repository": "https://github.com/Rigidity/chia.git",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -11,12 +11,13 @@
         "dist"
     ],
     "devDependencies": {
-        "@types/node": "^16.11.12",
+        "@types/js-yaml": "^4.0.5",
+        "@types/node": "^17.0.21",
         "source-map-support": "^0.5.21"
     },
     "dependencies": {
-        "@types/js-yaml": "^4.0.5",
         "axios": "^0.24.0",
+        "bech32": "^2.0.0",
         "js-yaml": "^4.1.0"
     }
 }
