--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@rigidity/chia",
     "author": "rigidity",
-    "version": "1.5.1",
+    "version": "1.6.0",
     "description": "Chia RPC client and various helper utilities.",
     "repository": "https://github.com/Rigidity/chia.git",
     "main": "dist/index.js",
@@ -15,6 +15,7 @@
         "source-map-support": "^0.5.21"
     },
     "dependencies": {
+        "@rigidity/bls-signatures": "^2.0.3",
         "@types/node": "^17.0.21",
         "axios": "^0.24.0",
         "bech32": "^2.0.0",
