--- a/package.json
+++ b/package.json
@@ -1,24 +1,49 @@
 {
-    "name": "@rigidity/chia",
+    "name": "chia-rpc",
     "author": "rigidity",
-    "version": "1.7.0",
+    "version": "1.0.0",
     "description": "Chia RPC client and various helper utilities.",
-    "repository": "https://github.com/Rigidity/chia.git",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "license": "MIT",
+    "repository": "https://github.com/Chia-Network/node-chia-rpc.git",
+    "license": "Apache-2.0",
+    "main": "dist/src/index.js",
+    "source": "src/index.ts",
+    "types": "dist/src/index.d.ts",
+    "scripts": {
+        "build": "parcel build",
+        "watch": "parcel watch",
+        "test": "parcel build --target test && mocha './dist/test/test.js' --require source-map-support/register --recursive --timeout 0"
+    },
     "files": [
-        "dist"
+        "dist/src"
     ],
+    "targets": {
+        "main": {
+            "distDir": "dist/src",
+            "context": "node"
+        },
+        "test": {
+            "source": "test/test.ts",
+            "distDir": "dist/test",
+            "context": "node"
+        }
+    },
     "devDependencies": {
+        "@parcel/packager-ts": "^2.8.0",
+        "@parcel/transformer-typescript-types": "^2.8.0",
+        "@types/chai": "^4.3.4",
         "@types/js-yaml": "^4.0.5",
-        "source-map-support": "^0.5.21"
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^18.11.9",
+        "mocha": "^10.1.0",
+        "parcel": "^2.8.0",
+        "source-map-support": "^0.5.21",
+        "typescript": "~4.7"
     },
     "dependencies": {
-        "@rigidity/bls-signatures": "^2.0.3",
-        "@types/node": "^17.0.21",
         "axios": "^0.24.0",
         "bech32": "^2.0.0",
+        "chai": "^4.3.7",
+        "chia-bls": "^1.0.1",
         "js-yaml": "^4.1.0"
     }
 }
