--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "main": "dist/src/index.js",
     "source": "src/index.ts",
     "types": "dist/src/index.d.ts",
+    "bundle": "dist/bundle.js",
     "scripts": {
         "build": "parcel build",
         "watch": "parcel watch",
@@ -25,6 +26,10 @@
             "source": "test/test.ts",
             "distDir": "dist/test",
             "context": "node"
+        },
+        "bundle": {
+            "source": "src/browser.ts",
+            "context": "browser"
         }
     },
     "devDependencies": {
@@ -34,10 +39,20 @@
         "@types/js-yaml": "^4.0.5",
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.11.9",
+        "buffer": "^5.7.1",
+        "events": "^3.3.0",
+        "https-browserify": "^1.0.0",
         "mocha": "^10.1.0",
+        "os-browserify": "^0.3.0",
         "parcel": "^2.8.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "punycode": "^1.4.1",
+        "querystring-es3": "^0.2.1",
         "source-map-support": "^0.5.21",
-        "typescript": "~4.7"
+        "stream-http": "^3.2.0",
+        "typescript": "~4.7",
+        "url": "^0.11.0"
     },
     "dependencies": {
         "axios": "^0.24.0",
