--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "chia-rpc",
     "author": "rigidity",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Chia RPC client and various helper utilities.",
     "repository": "https://github.com/Chia-Network/node-chia-rpc.git",
     "license": "Apache-2.0",
@@ -28,14 +28,22 @@
         }
     },
     "devDependencies": {
-        "@parcel/packager-ts": "^2.8.0",
-        "@parcel/transformer-typescript-types": "^2.8.0",
+        "@parcel/packager-ts": "^2.8.3",
+        "@parcel/transformer-typescript-types": "^2.8.3",
         "@types/chai": "^4.3.4",
         "@types/js-yaml": "^4.0.5",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.11.9",
-        "mocha": "^10.1.0",
-        "parcel": "^2.8.0",
+        "@types/node": "^18.15.0",
+        "buffer": "^5.7.1",
+        "events": "^3.3.0",
+        "https-browserify": "^1.0.0",
+        "mocha": "^10.2.0",
+        "os-browserify": "^0.3.0",
+        "parcel": "^2.8.3",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "punycode": "^1.4.1",
+        "querystring-es3": "^0.2.1",
         "source-map-support": "^0.5.21",
         "typescript": "~4.7"
     },
